--- a/frontend/src/app/features/book-tracker/book-modal/book-modal.component.html
+++ b/frontend/src/app/features/book-tracker/book-modal/book-modal.component.html
@@ -138,12 +138,12 @@
           </div>
           <div class="flex gap-2">
             <div class="flex-1">
-              <label class="block text-xs font-semibold mb-1">Pages</label>
-              <input type="number" min="1" formControlName="pages" placeholder="Total pages" class="border rounded p-2 w-full text-sm" />
+              <label class="block text-xs font-semibold mb-1">Current Page</label>
+              <input type="number" min="0" formControlName="currentPage" placeholder="Enter current page" class="border rounded p-2 w-full text-sm" />
             </div>
             <div class="flex-1">
-              <label class="block text-xs font-semibold mb-1">Current Page</label>
-              <input type="number" min="0" formControlName="currentPage" placeholder="Current page" class="border rounded p-2 w-full text-sm" />
+              <label class="block text-xs font-semibold mb-1">Total Pages</label>
+              <input type="number" min="1" formControlName="pages" placeholder="Enter total pages" class="border rounded p-2 w-full text-sm" />
             </div>
           </div>
           <div>
